# robbb

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Readme.md  base.db  build.rs  default.nix  fetcher.sh  flake.nix  gen-env.sh  shell.nix  sqlx-data.json  trup.db
.github/: CODEOWNERS  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  new-command.md  new-command.yaml
.github/workflows/: build.yaml  cargofmt.yaml  clippy.yaml  docker-publish.yaml  test-on-server.yaml
.sqlx/: query-0c88576dce38c07fa9d77263ab5e3e02b5fd72effb664ff96af236e7fe973374.json  query-0ce996dc3f45563f2bdb0d4726f2b43ccd87a52b8c69514df7897feb89c22fab.json  query-0fc74ffeaa8a6811f271b7905bfb0980929c0999657ba8d778d9f46f1da3613f.json  query-119359a3b3ee926414647c50404ecf27cf2a9ba7bf0b676f827735d1c24941fc.json  query-226b8494595a64c2f94760c4ce6b758da025ed0070b21f3f7ce8e1970c81ccb5.json  query-270180bd034c0134635b29bc20bebab94d2ba8f613a79a49eaf999c8ac805d81.json  query-2bdeb084c05e060d999359fc517d8d0adfee9fdebeeb9ffba3862a1f7544a318.json  query-3b3211af0c35f19ad8c32a048456b2adbb47775cec208ce1aebd543f38a1bfef.json  query-3e7804d6f6ed7af4687e5d2bab626e3adf5f552cc2d31b4ef365211f565af0ae.json  query-3fed338b95b7ad020b41a1f0232b17971ba254dffc0cffdfbc36821de0bd258c.json  query-4278ea9047d1443e8dc2c1fc64da762a219d0ec00d6e402d01463692ed8c94d5.json  query-5e7e1c0e6bc30fcaae882395e46cb1f3af61733077fe0525d0ff4e7096d0154a.json  query-600a256c4edc6bbeaf4c9f383a7c28e4cec3bad498d4e3f88e01481b188325e3.json  query-6aa8181feb59cd5c6dc942060b18518ebe7f37a4d07bb4b0b5fde0c21b20fb6f.json  query-6cb3dd3a23c32b2cec7b7710a6f8dfef4ff841c7f770bbe794c6fa41f2a8cb82.json  query-7193a2b848e2268d56a3dcb4b925014d951f30c1aec8f572230375a2ec9feb39.json  query-7577bdae53f7407534a632826a88564656e456434966a3296cc5375414697feb.json  query-75e00fd0d6a8ed307d638822478a085b5821478cb444fb697e4f39fa653df054.json  query-804dbb98d3ebdca2703d372f1e58156748f56e98d77d132251d07b52f3e90551.json  query-828561d33a663c1decbe23d302815b6230b02102a3549c274281899ac21d5a0a.json  query-8b784af44fc9e1a8edd626c6e41096a80c91d6675ad5758ecc6f59cc944b9a25.json  query-8cf2ddb35e421b79c2211b6b3a9feeef833e44471e11f4582d5a23432ed4743f.json  query-90bd03f2eb3931509feb58ef5fbf6b54075dc465976cad31cc612849d712ab65.json  query-9e2430ec7c7296b889637d6c19650f55374ead1e588a84651402bb5918fda54d.json  query-a4d40280b4cf456aa868a117a34369b17d032a2ad0b908391c7649c9e0c70d11.json  query-bd17229e614eafc8ec51aedac87f07a77575f9ac1882a48eb680e4c4544a8167.json  query-bde2664f709df5f73347676ebf4f1833307327428d791838d963898d08080c0d.json  query-dbe7847eb59535d213b80e8d322bd36203174963556e806b34a1e787d4814cbc.json  query-df84d2906bcfd74824d2e80c4582040c05113231fea91e7b0b3423673ca5a18e.json  query-eb70d1603c247c330ce591420fc391180193dc5d6eaf42de6c0928a38dc6ec6d.json  query-eb9ebcf83026a19e6038024031823ee1c7bb5ed452543dbe510b8ce4d285a630.json  query-f0d2ab5f212ef40d1ecec2a5424d5b861b09058f7527712ef343fc117237847c.json  query-f814c7bc275e84e03fd1ddc5d3a42d06c9b726426f968715d60d138af5471558.json  query-fc050199c34fcc2b659e3aac42252c661a3ca10c7d64fdb2c7b5195c7dc25451.json  query-fd9087bdf617bf354cdedddc3c11992734e770ca3173f208fd54d0241163c741.json
crates/commands_robbb/: Cargo.toml
crates/commands_robbb/src/: checks.rs  lib.rs  modlog.rs  prelude.rs
crates/commands_robbb/src/commands/: ask.rs  ban.rs  emojistats.rs  help.rs  mod.rs  poll.rs  tag.rs  top.rs  unban.rs  warn.rs
crates/commands_robbb/src/commands/fetch/: fetch.rs  mod.rs  setfetch.rs
crates/db_robbb/: Cargo.toml
crates/db_robbb/migrations/: 20220202191709_kicks_and_bans.sql
crates/db_robbb/src/: lib.rs
crates/db_robbb/src/db/: fetch.rs  kick.rs  mod.rs  mute.rs  note.rs
crates/robbb/: Cargo.toml
crates/robbb/src/: attachment_logging.rs  error_handling.rs  logging.rs  main.rs  monitoring.rs  util.rs
crates/robbb/src/commands/: ban.rs  emojistats.rs  highlights.rs  note.rs  pfp.rs  role.rs
crates/robbb/src/commands/fetch/: fetch.rs  mod.rs
crates/robbb/src/events/: auto_moderation_action.rs  guild_audit_log_entry_create.rs  guild_member_addition.rs  guild_member_removal.rs  guild_member_update.rs  handle_blocklist.rs  message_create.rs  message_delete.rs  message_update.rs  mod.rs  reaction_add.rs  reaction_remove.rs  ready.rs
crates/robbb_commands/: Cargo.toml
crates/robbb_commands/src/: checks.rs  lib.rs  modlog.rs
crates/robbb_commands/src/commands/: ask.rs  attachment_hack.rs  ban.rs  blocklist.rs  emojistats.rs  errors.rs  help.rs  highlights.rs  info.rs  kick.rs  mod.rs  modping.rs  move_users.rs  mute.rs  note.rs  pfp.rs  pin.rs  poise_commands.rs  poll.rs  purge.rs  role.rs  small.rs  tag.rs  top.rs  unban.rs  version.rs  warn.rs
crates/robbb_commands/src/commands/fetch/: fetch.rs  mod.rs  setfetch.rs
crates/robbb_db/: Cargo.toml
crates/robbb_db/migrations/: 20210418100412_emojis.sql  20220130193536_fetch-tag-timestamps.sql  20220521195821_initialize.sql
crates/robbb_db/src/: lib.rs
crates/robbb_db/src/db/: ban.rs  blocklist.rs  emoji_logging.rs  fetch.rs  fetch_field.rs  highlights.rs  htm.rs  kick.rs  mod.rs  mod_action.rs  mute.rs  note.rs  profile.rs  tag.rs  warn.rs
crates/robbb_util/: Cargo.toml
crates/robbb_util/src/: cdn_hack.rs  collect_interaction.rs  config.rs  embeds.rs  extensions.rs  lib.rs  modal.rs  prelude.rs  util.rs
crates/robbb_util/src/embeds/: mod.rs  paginated_embeds.rs
crates/shared_robbb/: Cargo.toml
crates/shared_robbb/src/: extensions.rs  fetch_field.rs  lib.rs
migrations/: 20210306132036_stuff.sql  20210310100412_initialize.sql  20210328074109_highlights.sql  20210418100412_emojis.sql  20220128004316_notes-context.sql  20231120193725_Add_hard_to_moderate_table.sql
nix/: sources.json  sources.nix
src/: attachment_logging.rs  checks.rs  commands.rs  config.rs  embeds.rs  events.rs  extensions.rs  main.rs  modlog.rs  prelude.rs  util.rs
src/commands/: ask.rs  ban.rs  blocklist.rs  emojistats.rs  errors.rs  fetch.rs  help.rs  highlights.rs  info.rs  kick.rs  mod.rs  mute.rs  (+15 more)
(+26 files in other folders)
