[package]
name = "commands_robbb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.1", default-features = false, features = ["collector", "builder", "cache", "chrono", "client", "gateway", "model", "http", "utils"]}
anyhow = "1.0"
chrono = "0.4"
chrono-humanize = "0.2"
itertools = "0.10"
indoc = "1.0"
lazy_static = "1.4"
rand = "0.8"
humantime = "2"
thiserror = "1.0"
serde_json = "1"
serde = "1"
maplit = "1"
byte-unit = "4.0"
url = "2"
regex = "1"
reqwest = { version = "0.11" }
tokio = { version = "1.16", features = ["macros", "fs", "rt-multi-thread"]}
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

unicase = "2.6.0"

tracing = "0.1.31"
tracing-log = "0.1.2"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.0", features = [ "std", "env-filter" ] }
poise = "0.1.0"
parking_lot = "0.12.0"

db_robbb = { path = "../db_robbb" }
shared_robbb = { path = "../shared_robbb" }
