[package]
name = "robbb"
version = "0.1.0"
authors = ["elkowar <5300871+elkowar@users.noreply.github.com>"]
edition = "2018"


[dependencies]
#serenity = { git = "https://github.com/serenity-rs/serenity/", branch = "next", features = ["collector"]}
serenity = { version = "0.11.5", default-features = false, features = ["collector", "builder", "cache", "chrono", "client", "gateway", "model", "http", "utils"]}
anyhow = "1.0"
chrono = "0.4"
chrono-humanize = "0.2"
itertools = "0.11.0"
indoc = "2.0.4"
lazy_static = "1.4"
rand = "0.8"
humantime = "2"
thiserror = "1.0"
serde_json = "1"
serde = "1"
maplit = "1"
byte-unit = "4.0"
url = "2"
regex = "1"
reqwest = { version = "0.11" }
tokio = { version = "1.21", features = ["macros", "fs", "rt-multi-thread"]}
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

unicase = "2.6.0"

poise = "0.5.2"
parking_lot = "0.12"

tracing = "0.1.37"
tracing-log = "0.1.2"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = [ "std", "env-filter" ] }
# we're using my fork of tracing-honeycomb, as we want to use an unreleased version of libhoney-rust (which tracing-honeycomb also transitively depends on)
# this is because libhoney-rusts latest released version still depends on an old version of tokio, which is affected by https://github.com/advisories/GHSA-fg7r-2g4j-5cgr
tracing-honeycomb = { git = "https://github.com/elkowar/tracing-honeycomb", branch = "latest" }
libhoney-rust = { git = "https://github.com/nlopes/libhoney-rust", rev = "f64def9dad3523866be429866fa2821d8b0e21ad" }
#tracing-honeycomb = "0.4.3"
#libhoney-rust = "0.1.6"


robbb_db = { path = "../robbb_db" }
robbb_util = { path = "../robbb_util" }
robbb_commands = { path = "../robbb_commands" }

[target.'cfg(any(windows, linux))'.dependencies]
cpu-monitor = "0.1.1"
