[package]
name = "robbb"
version = "0.1.0"
authors = ["elkowar <5300871+elkowar@users.noreply.github.com>"]
edition = "2018"


[dependencies]
serenity.workspace = true
poise.workspace = true
anyhow = "1.0"
chrono = "0.4"
chrono-humanize = "0.2"
itertools = "0.12.0"
indoc = "2.0.4"
lazy_static = "1.4"
rand = "0.8"
humantime = "2"
thiserror = "1.0"
serde_json = "1"
serde = "1"
maplit = "1"
byte-unit = "5.1.3"
url = "2"
regex = "1"
reqwest = { version = "0.11" }
tokio = { version = "1.21", features = ["macros", "fs", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

unicase = "2.6.0"

parking_lot = "0.12"

tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }


robbb_db = { path = "../robbb_db" }
robbb_util = { path = "../robbb_util" }
robbb_commands = { path = "../robbb_commands" }
# tracing-logfmt = "0.3.3"
tracing-logfmt-otel = { version = "0.1.0" }

opentelemetry = { version = "0.21.0", features = ["trace", "logs"] }
opentelemetry-jaeger = { version = "0.20.0" }
opentelemetry-otlp = { version = "0.14.0", features = [
    "http-proto",
    "reqwest-client",
    "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22.0"
