[package]
name = "robbb"
version = "0.1.0"
authors = ["elkowar <5300871+elkowar@users.noreply.github.com>"]
edition = "2018"


[dependencies]
tracing-error.workspace = true
eyre.workspace = true
color-eyre.workspace = true
serenity.workspace = true
poise.workspace = true
chrono.workspace = true
chrono-humanize.workspace = true
itertools.workspace = true
indoc.workspace = true
lazy_static.workspace = true
rand.workspace = true
humantime.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
maplit.workspace = true
byte-unit = { workspace = true, features = ["u128"] }
url.workspace = true
regex.workspace = true
reqwest = { workspace = true }
tokio = { workspace=  true, features = ["macros", "fs", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["compat"] }
futures.workspace = true

unicase.workspace = true

parking_lot.workspace = true

tracing.workspace = true
tracing-log.workspace = true
tracing-futures.workspace = true
tracing-subscriber = { workspace = true, features = [
    "std",
    "env-filter",
    "tracing-log",
] }


robbb_db.workspace = true
robbb_util.workspace = true
robbb_commands.workspace = true
# tracing-logfmt = "0.3.3"
tracing-logfmt-otel.workspace = true

opentelemetry = { workspace = true, features = ["trace", "logs"] }
opentelemetry-otlp = { workspace = true, features = [
    "http-proto",
    "reqwest-client",
    "grpc-tonic",
] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
tracing-opentelemetry.workspace = true


pyroscope.workspace = true
pyroscope_pprofrs.workspace = true
