[package]
name = "robbb_commands"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.2", default-features = false, features = ["collector", "builder", "cache", "chrono", "client", "gateway", "model", "http", "utils"]}
anyhow = "1.0"
chrono = "0.4"
chrono-humanize = "0.2"
itertools = "0.10"
indoc = "1.0"
lazy_static = "1.4"
humantime = "2"
thiserror = "1.0"
serde_json = "1"
serde = "1"
maplit = "1"
byte-unit = "4.0"
regex = "1"
reqwest = { version = "0.11" }
tokio = { version = "1.19", features = ["macros", "fs", "rt-multi-thread"]}
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

unicase = "2.6.0"

tracing = "0.1.31"
tracing-futures = "0.2.5"
poise = "0.2"
parking_lot = "0.12.1"

robbb_db = { path = "../robbb_db" }
robbb_util = { path = "../robbb_util" }
