[package]
name = "robbb_commands"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity.workspace = true
poise.workspace = true
anyhow = "1.0"
chrono = "0.4"
chrono-humanize = "0.2"
itertools = "0.11.0"
indoc = "2.0.5"
lazy_static = "1.4"
humantime = "2"
thiserror = "1.0"
serde_json = "1"
serde = "1"
maplit = "1"
byte-unit = "4.0"
regex = "1"
reqwest = { version = "0.11" }
tokio = { version = "1.21", features = ["macros", "fs", "rt-multi-thread"]}
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

unicase = "2.7.0"

tracing = "0.1.40"
tracing-futures = "0.2.5"
parking_lot = "0.12.1"

robbb_db = { path = "../robbb_db" }
robbb_util = { path = "../robbb_util" }
