[package]
name = "robbb_commands"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity.workspace = true
poise.workspace = true
anyhow.workspace = true
chrono.workspace = true
chrono-humanize.workspace = true
itertools.workspace = true
indoc.workspace = true
lazy_static.workspace = true
humantime.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
maplit.workspace = true
byte-unit = { workspace = true, features = ["u128"] }
regex.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["macros", "fs", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["compat"] }
futures.workspace = true

unicase.workspace = true

tracing.workspace = true
tracing-futures.workspace = true
parking_lot.workspace = true

robbb_db.workspace = true
robbb_util.workspace = true
