[package]
name = "robbb_db"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity.workspace = true
poise.workspace = true
thiserror = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
anyhow = "1.0"
chrono = "0.4"
itertools = "0.11.0"
regex = "1"
tracing = "0.1.40"
serde_json = "1"
serde = "1"
lazy_static = "1.4"
unicase = "2.6.0"
