[package]
name = "robbb_db"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity.workspace = true
poise.workspace = true
thiserror.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
anyhow.workspace = true
chrono.workspace = true
itertools.workspace = true
regex.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
lazy_static.workspace = true
unicase.workspace = true
