[package]
name = "robbb_db"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
serenity.workspace = true
poise.workspace = true
thiserror.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
color-eyre.workspace = true
eyre.workspace = true
chrono.workspace = true
itertools.workspace = true
regex.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
lazy_static.workspace = true
unicase.workspace = true
