[package]
name = "robbb_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity.workspace = true
poise.workspace = true
anyhow = "1.0.82"
serde_json = "1.0.116"
serde = "1.0.200"
thiserror = "1.0.59"
lazy_static = "1.4"
chrono = "0.4.38"
chrono-humanize = "0.2.3"
itertools = "0.11.0"
tokio-util = { version = "0.7.10", features = ["compat"] }
tokio = { version = "1.21", features = ["macros", "fs", "rt-multi-thread"]}
futures = "0.3.30"
tracing = "0.1.40"
reqwest = { version = "0.11" }
tracing-futures = "0.2.5"
rand = "0.8.5"
regex = "1.10.4"
url = "2.5.0"
parking_lot = "0.12.2"
extend = "1.2"

robbb_db = { path = "../robbb_db" }
