[package]
name = "robbb_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity.workspace = true
poise.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
tokio = { workspace = true, features = ["macros", "fs", "rt-multi-thread"]}
eyre.workspace = true
color-eyre.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
chrono.workspace = true
chrono-humanize.workspace = true
itertools.workspace = true
futures.workspace = true
tracing.workspace = true
reqwest.workspace = true
tracing-futures.workspace = true
rand.workspace = true
regex.workspace = true
url.workspace = true
parking_lot.workspace = true
extend.workspace = true

robbb_db.workspace = true
