[package]
name = "shared_robbb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.1", default-features = false, features = ["collector", "builder", "cache", "chrono", "client", "gateway", "model", "http", "utils"]}
anyhow = "1.0"
serde_json = "1"
serde = "1"
poise = "0.1.0"
thiserror = "1.0"
lazy_static = "1.4"
chrono = "0.4"
chrono-humanize = "0.2"
humantime = "2"
